--- a/index.html
+++ b/index.html
@@ -1,129 +1,141 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>KATOSHO</title>
-      <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.css">
-      <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
-      <link rel="stylesheet" href="assets/js/bootstrap.bundle.min.js">
-      <link rel="stylesheet" href="assets/js/bootstrap.bundle.js">
-      <link rel="stylesheet" href="assets/css/style.css">
-      <link rel="stylesheet" href="assets/css/carousel.css">
-    </head>
 
-    <body>
-      <div class="header">
-        <div class="logo">
-          <img src="assets/images/loogo.jpg" alt="logo" width="90" height="70">
-        </div>
+<head>
+  <title>KATOSHO</title>
+  <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.css">
+  <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/js/bootstrap.bundle.min.js">
+  <link rel="stylesheet" href="assets/js/bootstrap.bundle.js">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/carousel.css">
+</head>
 
-        <div class="menu">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pages/about.html">About Us</a></li>
-            <li><a href="pages/service.html">Our Menu</a></li>
-            <li><a href="pages/menu.html">Our Menu</a></li>
-            <li><a href="pages/contact.html">Contact Us</a></li>
-          </ul>
-        </div>
-        <button class="pg"><a href="#">REGISTER HIRE</a></button>
-      </div>
-      <!-- SLIDER START HERE -->
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/images/slider/french.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="assets/images/slider/coffee.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="assets/images/slider/rest2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      <!-- SLIDER END HERE  -->
+<body>
+  <div class="header">
+    <div class="logo">
+      <img src="assets/images/loogo.jpg" alt="logo" width="90" height="70">
+    </div>
 
-    </div>   
-      
-    <div class="grid-container">
-      <!-- <div class="content">
-        <h2 style="color: orange;">JESSY FRESH FOOD</h2>
-      </div> -->
-      <div class="row">
-        <div class="col-8">
-          <img src="assets/images/menu.png">
-        </div>
-        <div class="col-3">
-          <h5>about us</h5>
-          <h3>We Always Provide Delicious Food and Quality Service to You!</h3>
-          <p>
-            Al Safrah Restaurant is one of the preeminent south Indian Fine Dining restaurants in Dubai, where we have an assortment of ingredients from traditionalist to standard Kerala Style. Our Menu includes Starters, Salads, Nadan Cuisine, Veggie Delights, Soup, Tandoor, Seafood, Indian & Chinese Cuisine, Nammudae Sontham Chatti Choru, Real Malabar Dum Biriyani & Fish Mango Chatti Curry which is served in its high quality. Our homemade flavours serve the true flavours of home cooked food.
-            Fresh fish & Seafood from the daily market, Organic Egg, Indian Mutton and Beef makes Al Safrah Restaurant unique in the market.</p>
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pages/about.html">About Us</a></li>
+        <li><a href="pages/service.html">Our Menu</a></li>
+        <li><a href="pages/menu.html">Our Menu</a></li>
+        <li><a href="pages/contact.html">Contact Us</a></li>
+      </ul>
+    </div>
+    <button class="pg"><a href="#">REGISTER HIRE</a></button>
+  </div>
+  <!-- SLIDER START HERE -->
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/images/slider/french.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
-
-      <div class="row mt-5">
-        <div class="col">
-          <img src="assets/images/biryani.png" width="370px">
-        </div>
-        <div class="col">
-            <img src="assets/images/chiken.png" width="370px">
-        </div>
-        <div class="col">
-          <img src="assets/images/fish.png" width="370px">
+      <div class="carousel-item">
+        <img src="assets/images/slider/coffee.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
         </div>
       </div>
-
-      <div class="row mt-5">
-        <div class="col-4">
-          <img src="assets/images/food.jpg"  width="400px">
-        </div>
-        <div class="col-3 text-center">
-          <h3>A unique taste experience in the heart</h3>
-          <p>
-            The TO restaurant offers you its bistronomic Fusion cuisine for lunch and dinner.
-            For dinner, discover all the knowledge of our chef with the tradition of Omakase: a carte blanche menu in 8 courses.
-          </p><br>
-          <button class="pg"><a href="pages/about.html">Learn More</a></button>
-        </div>
-        <div class="col-4 ">
-          <img src="assets/images/friends.webp" width="530px">
+      <div class="carousel-item">
+        <img src="assets/images/slider/rest2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
         </div>
       </div>
     </div>
-            
-    <footer>
-      <div class="foot mt-5">
-        <div class="row">
-          <div class="col-4">
-            <img class="log" src="assets/images/loogo.jpg" width="150px" height="100px">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <!-- SLIDER END HERE  -->
+
+  </div>
+
+  <div class="grid-container">
+    <!-- <div class="content">
+        <h2 style="color: orange;">JESSY FRESH FOOD</h2>
+      </div> -->
+    <div class="row">
+      <div class="col-8">
+        <img src="assets/images/menu.png">
+      </div>
+      <div class="col-3">
+        <h5>about us</h5>
+        <h3>We Always Provide Delicious Food and Quality Service to You!</h3>
+        <p>
+          Al Safrah Restaurant is one of the preeminent south Indian Fine Dining restaurants in Dubai, where we have an
+          assortment of ingredients from traditionalist to standard Kerala Style. Our Menu includes Starters, Salads,
+          Nadan Cuisine, Veggie Delights, Soup, Tandoor, Seafood, Indian & Chinese Cuisine, Nammudae Sontham Chatti
+          Choru, Real Malabar Dum Biriyani & Fish Mango Chatti Curry which is served in its high quality. Our homemade
+          flavours serve the true flavours of home cooked food.
+          Fresh fish & Seafood from the daily market, Organic Egg, Indian Mutton and Beef makes Al Safrah Restaurant
+          unique in the market.</p>
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col">
+        <img src="assets/images/biryani.png" width="370px">
+      </div>
+      <div class="col">
+        <img src="assets/images/chiken.png" width="370px">
+      </div>
+      <div class="col">
+        <img src="assets/images/fish.png" width="370px">
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col-4">
+        <img src="assets/images/food.jpg" width="400px">
+      </div>
+      <div class="col-3 text-center">
+        <h3>A unique taste experience in the heart</h3>
+        <p>
+          The TO restaurant offers you its bistronomic Fusion cuisine for lunch and dinner.
+          For dinner, discover all the knowledge of our chef with the tradition of Omakase: a carte blanche menu in 8
+          courses.
+        </p><br>
+        <button class="pg"><a href="pages/about.html">Learn More</a></button>
+      </div>
+      <div class="col-4 ">
+        <img src="assets/images/friends.webp" width="530px">
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div class="foot mt-5">
+      <div class="row">
+        <div class="col-4">
+          <img class="log" src="assets/images/loogo.jpg" width="150px" height="100px">
           <P>
-            Stroll by a beautiful fountain that is surrounded by coconut trees, through our doors, and into our breath-taking outdoor deck overlooking the beach with views of the archipelago islands, put your feet up, and take in the beauty of the African sunset with your favourite gin and tonic in hand.
+            Stroll by a beautiful fountain that is surrounded by coconut trees, through our doors, and into our
+            breath-taking outdoor deck overlooking the beach with views of the archipelago islands, put your feet up,
+            and take in the beauty of the African sunset with your favourite gin and tonic in hand.
           </P>
           <div class="icon">
             <img src="assets/icon/facebook.webp" width="50px" height="35px">
@@ -131,35 +143,36 @@
             <img src="assets/icon/youtube.webp" width="45px" height="35px">
             <img src="assets/icon/linkedin.png" width="45px" height="35px">
           </div>
-          </div>
-          <div class="col-3">
-            <ol>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="pages/about.html">About Us</a></li>
-              <li><a href="pages/service.html">Our Menu</a></li>
-              <li><a href="pages/menu.html">Our Menu</a></li>
-              <li><a href="pages/contact.html">Contact Us</a></li>
-            </ol>
-          </div>
-          <div class="col">
+        </div>
+        <div class="col-3">
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pages/about.html">About Us</a></li>
+            <li><a href="pages/service.html">Our Menu</a></li>
+            <li><a href="pages/menu.html">Our Menu</a></li>
+            <li><a href="pages/contact.html">Contact Us</a></li>
+          </ol>
+        </div>
+        <div class="col">
 
-          </div>
         </div>
       </div>
-    </footer>
-     <script src="assets/js/bootstrap.bundle.js"></script>
-      <script src="assets/js/bootstrap.bundle.min.js"></script>
-      <script src="assets/js/bootstrap.bundle.js.map"></script>
-      <script src="assets/js/bootstrap.bundle.min.js.map"></script>
-      <script type="text/javascript">
-      </script>
-      </script>
-      </bdy>
-    </body>
-  </html>    
-  
-  
-    <!-- <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    </div>
+  </footer>
+  <script src="assets/js/bootstrap.bundle.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.js.map"></script>
+  <script src="assets/js/bootstrap.bundle.min.js.map"></script>
+  <script type="text/javascript">
+  </script>
+  </script>
+  </bdy>
+</body>
+
+</html>
+
+
+<!-- <nav class="navbar navbar-expand-sm navbar-light bg-light">
           <div class="container">
             <a class="navbar-brand" href="#"><img src="assets/images/loogo.jpg" width="80px" height="60px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
