--- a/index.html
+++ b/index.html
@@ -1,33 +1,71 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KATOSHO</title>
   <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="assets/js/bootstrap.bundle.min.js">
   <link rel="stylesheet" href="assets/js/bootstrap.bundle.js">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css"> 
   <link rel="stylesheet" href="assets/css/carousel.css">
+
+  <style>
+    .corousel-image-size{
+      height: 109vh;
+    }
+  </style>
 </head>
 
 <body>
-  <div class="header">
-    <div class="logo">
-      <img src="assets/images/loogo.jpg" alt="logo" width="90" height="70">
+  <!-- NAVBAR START HERE -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark p-md-3">
+    <div class="container">
+      <img src="assets/images/logo.png" width="90px" height="80px">
+      <button
+        type="button"
+        class="navbar-toggler"
+        data-bs-target="#navbarNav"
+        data-bs-taggle="collapse"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-lable="toggle navbar"
+        >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="mx-auto">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link text-white">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="pages/about.html" class="nav-link text-white">About</a>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <button class="btn text-white dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Our Services
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="pages/menu.html">Menu</a></li>
+                  <li><a class="dropdown-item" href="pages/booking.html">Venue</a></li>
+                  <li><a class="dropdown-item" href="pages/liqure.html">Liqure</a></li>
+                </ul>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a href="pages/contact.html" class="nav-link text-white">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+  </nav>
+  <!-- NAVBAR END HERE -->
 
-    <div class="menu">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pages/about.html">About Us</a></li>
-        <li><a href="pages/service.html">Our Menu</a></li>
-        <li><a href="pages/menu.html">Our Menu</a></li>
-        <li><a href="pages/contact.html">Contact Us</a></li>
-      </ul>
-    </div>
-    <button class="pg"><a href="#">REGISTER HIRE</a></button>
-  </div>
   <!-- SLIDER START HERE -->
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -40,24 +78,24 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/images/slider/french.jpg" class="d-block w-100" alt="...">
+        <img src="assets/images/slider/french.jpg" class="d-block w-100 corousel-image-size" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h1>JESSY FRESH FOOD</h1>
+          <p>One Of The Preffered Restaurant In Tanzania.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/images/slider/coffee.jpg" class="d-block w-100" alt="...">
+        <img src="assets/images/slider/coffee.jpg" class="d-block w-100 " alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <h1>JESSY FRESH FOOD</h1>
+          <p>One Of The Preffered Restaurant In Tanzania.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/images/slider/rest2.jpg" class="d-block w-100" alt="...">
+        <img src="assets/images/slider/rest2.jpg" class="d-block w-100 " alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h1>JESSY FRESH FOOD</h1>
+          <p>One Of The Preffered Restaurant In Tanzania.</p>
         </div>
       </div>
     </div>
@@ -70,30 +108,25 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <!-- SLIDER END HERE  -->
-
-  </div>
-
-  <div class="grid-container">
-    <!-- <div class="content">
-        <h2 style="color: orange;">JESSY FRESH FOOD</h2>
-      </div> -->
-    <div class="row">
-      <div class="col-8">
-        <img src="assets/images/menu.png">
-      </div>
-      <div class="col-3">
-        <h5>about us</h5>
-        <h3>We Always Provide Delicious Food and Quality Service to You!</h3>
-        <p>
-          Al Safrah Restaurant is one of the preeminent south Indian Fine Dining restaurants in Dubai, where we have an
-          assortment of ingredients from traditionalist to standard Kerala Style. Our Menu includes Starters, Salads,
-          Nadan Cuisine, Veggie Delights, Soup, Tandoor, Seafood, Indian & Chinese Cuisine, Nammudae Sontham Chatti
-          Choru, Real Malabar Dum Biriyani & Fish Mango Chatti Curry which is served in its high quality. Our homemade
-          flavours serve the true flavours of home cooked food.
-          Fresh fish & Seafood from the daily market, Organic Egg, Indian Mutton and Beef makes Al Safrah Restaurant
-          unique in the market.</p>
-      </div>
+  <!-- SLIDER END HERE> -->
+  <div class="container-fluid">
+    <div class="row justify-content-sm-around">
+        <div class="col-7">
+          <img src="assets/images/menu.png">
+        </div>
+        <div class="col-4">
+          <h5>about us</h5>
+          <h3>We Always Provide Delicious Food and Quality Service to You!</h3>
+          <p>
+            Al Safrah Restaurant is one of the preeminent south Indian Fine Dining restaurants in Dubai, where we have an
+            assortment of ingredients from traditionalist to standard Kerala Style. Our Menu includes Starters, Salads,
+            Nadan Cuisine, Veggie Delights, Soup, Tandoor, Seafood, Indian & Chinese Cuisine, Nammudae Sontham Chatti
+            Choru, Real Malabar Dum Biriyani & Fish Mango Chatti Curry which is served in its high quality. Our homemade
+            flavours serve the true flavours of home cooked food.
+            Fresh fish & Seafood from the daily market, Organic Egg, Indian Mutton and Beef makes Al Safrah Restaurant
+            unique in the market.
+          </p>
+        </div>
     </div>
 
     <div class="row mt-5">
@@ -119,7 +152,7 @@
           For dinner, discover all the knowledge of our chef with the tradition of Omakase: a carte blanche menu in 8
           courses.
         </p><br>
-        <button class="pg"><a href="pages/about.html">Learn More</a></button>
+        <button class="button bg-success rounded"><a class="text-decoration-none text-white" href="pages/about.html">Learn More</a></button>
       </div>
       <div class="col-4 ">
         <img src="assets/images/friends.webp" width="530px">
@@ -127,80 +160,78 @@
     </div>
   </div>
 
+  <!-- FOOTER -->
   <footer>
-    <div class="foot mt-5">
+    <div class="footer mt-5">
       <div class="row">
-        <div class="col-4">
-          <img class="log" src="assets/images/loogo.jpg" width="150px" height="100px">
+        <div class="col-3">
+          <img class="log" src="assets/images/logo.png" width="150px" height="140px">
           <P>
             Stroll by a beautiful fountain that is surrounded by coconut trees, through our doors, and into our
             breath-taking outdoor deck overlooking the beach with views of the archipelago islands, put your feet up,
             and take in the beauty of the African sunset with your favourite gin and tonic in hand.
           </P>
           <div class="icon">
-            <img src="assets/icon/facebook.webp" width="50px" height="35px">
-            <img class="ico" src="assets/icon/twiter.jpg" width="45px" height="35px">
-            <img src="assets/icon/youtube.webp" width="45px" height="35px">
-            <img src="assets/icon/linkedin.png" width="45px" height="35px">
+            <img src="assets/icon/facebook.png" width="45px" height="35px">
+            <img src="assets/icon/twiter.png" width="45px" height="35px">
+            <img src="assets/icon/youtube.png" width="45px" height="35px">
+            <img src="assets/icon/instagram.png" width="45px" height="35px">
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mt-5 py-5">
+          <h3>Quick links</h3>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/about.html">About Us</a></li>
-            <li><a href="pages/service.html">Our Menu</a></li>
             <li><a href="pages/menu.html">Our Menu</a></li>
+            <li><a href="pages/liqure.html">Liqure</a></li>
+            <li><a href="pages/booking.html">Vennue</a></li>
             <li><a href="pages/contact.html">Contact Us</a></li>
+
           </ol>
         </div>
-        <div class="col">
+
+        <div class="col-3 mt-5 py-5">
+          <ol>
+            <li><a href="#">Party Planning</a></li>
+            <li><a href="#">Gaming Zone</a></li>
+            <li><a href="#">Marriage Party</a></li>
+            <li><a href="#">Conference Room</a></li>
+            <li><a href="#">Tour Consultance</a></li>
+            <li><a href="#">Coctail Party Houses</a></li>
+        </div>
+
+        <div class="col-3 mt-5">
+          <h3>Contact Us</h3>
+          <p>
+            <img src="assets/icon/phone.png" width="45px" height="35px">
+            +255 656 707 199
+          </p>
+          <p>
+            <img src="assets/icon/email.png" width="45px" height="35px">
+            info@jessyfood.co.tz
+          </p>
+          <p>
+            <img src="assets/icon/location.png" width="45px" height="35px">
+            Dar-es-salaam RD - P.O.Box 6019 Morogoro Msamvu Area
+          </p>
 
         </div>
       </div>
     </div>
   </footer>
-  <script src="assets/js/bootstrap.bundle.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/bootstrap.bundle.js.map"></script>
-  <script src="assets/js/bootstrap.bundle.min.js.map"></script>
-  <script type="text/javascript">
-  </script>
-  </script>
-  </bdy>
+
+  <!-- <script>
+    var nav = document.querySelector('nav');
+
+    window.addEventListerner('scroll', function(){
+      if(window.pageYOffset > 100){
+        nav.classList.add('bg-dark', 'shadow');
+      } else{
+        nav.classList.remove('bg-dark', 'shadow') 
+      }
+    })
+  </script> -->
 </body>
-
 </html>
-
-
-<!-- <nav class="navbar navbar-expand-sm navbar-light bg-light">
-          <div class="container">
-            <a class="navbar-brand" href="#"><img src="assets/images/loogo.jpg" width="80px" height="60px"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="pages/about.html">About Us</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="pages/service.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Our Services
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="pages/menu.html">Our Menu</a>
-                    <a class="dropdown-item" href="pages/booking.html">Booking Hire</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">more</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="pages/contact.html">Contact Us</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
