--- a/index.html
+++ b/index.html
@@ -12,89 +12,96 @@
 </head>
 
 <body>
-  <div class="header">
-    <div class="logo">
-      <img src="assets/images/loogo.jpg" alt="logo" width="90" height="70">
-    </div>
+  <div class="container">
+    <div class="header">
+      <div class="logo">
+        <img src="assets/images/loogo.jpg" alt="logo" width="90" height="70">
+      </div>
 
-    <div class="menu">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pages/about.html">About Us</a></li>
-        <li><a href="pages/service.html">Our Menu</a></li>
-        <li><a href="pages/menu.html">Our Menu</a></li>
-        <li><a href="pages/contact.html">Contact Us</a></li>
-      </ul>
-    </div>
-    <button class="pg"><a href="#">REGISTER HIRE</a></button>
-  </div>
-  <!-- SLIDER START HERE -->
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/images/slider/french.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
+      <div class="menu">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="pages/about.html">About Us</a></li>
+          <li><a href="pages/service.html">Our Menu</a></li>
+          <li><a href="pages/menu.html">Our Menu</a></li>
+          <li><a href="pages/contact.html">Contact Us</a></li>
+        </ul>
       </div>
-      <div class="carousel-item">
-        <img src="assets/images/slider/coffee.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/slider/rest2.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
+      <button class="pg"><a href="#">REGISTER HIRE</a></button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-  <!-- SLIDER END HERE  -->
+    <header>
 
-  </div>
+    </header>
+
+    <!-- SLIDER START HERE -->
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/images/slider/french.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/images/slider/coffee.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/images/slider/rest2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- SLIDER END HERE  -->
+
+
 
   <div class="grid-container">
     <!-- <div class="content">
         <h2 style="color: orange;">JESSY FRESH FOOD</h2>
       </div> -->
-    <div class="row">
-      <div class="col-8">
-        <img src="assets/images/menu.png">
+      <div class="row">
+        <div class="col-8">
+          <img src="assets/images/menu.png">
+        </div>
+        <div class="col-4">
+          <h5>about us</h5>
+          <h3>We Always Provide Delicious Food and Quality Service to You!</h3>
+          <p>
+            Al Safrah Restaurant is one of the preeminent south Indian Fine Dining restaurants in Dubai, where we have an
+            assortment of ingredients from traditionalist to standard Kerala Style. Our Menu includes Starters, Salads,
+            Nadan Cuisine, Veggie Delights, Soup, Tandoor, Seafood, Indian & Chinese Cuisine, Nammudae Sontham Chatti
+            Choru, Real Malabar Dum Biriyani & Fish Mango Chatti Curry which is served in its high quality. Our homemade
+            flavours serve the true flavours of home cooked food.
+            Fresh fish & Seafood from the daily market, Organic Egg, Indian Mutton and Beef makes Al Safrah Restaurant
+            unique in the market.</p>
+        </div>
       </div>
-      <div class="col-3">
-        <h5>about us</h5>
-        <h3>We Always Provide Delicious Food and Quality Service to You!</h3>
-        <p>
-          Al Safrah Restaurant is one of the preeminent south Indian Fine Dining restaurants in Dubai, where we have an
-          assortment of ingredients from traditionalist to standard Kerala Style. Our Menu includes Starters, Salads,
-          Nadan Cuisine, Veggie Delights, Soup, Tandoor, Seafood, Indian & Chinese Cuisine, Nammudae Sontham Chatti
-          Choru, Real Malabar Dum Biriyani & Fish Mango Chatti Curry which is served in its high quality. Our homemade
-          flavours serve the true flavours of home cooked food.
-          Fresh fish & Seafood from the daily market, Organic Egg, Indian Mutton and Beef makes Al Safrah Restaurant
-          unique in the market.</p>
-      </div>
-    </div>
 
     <div class="row mt-5">
       <div class="col">
@@ -159,6 +166,8 @@
       </div>
     </div>
   </footer>
+
+  
   <script src="assets/js/bootstrap.bundle.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/bootstrap.bundle.js.map"></script>
@@ -166,7 +175,8 @@
   <script type="text/javascript">
   </script>
   </script>
-  </bdy>
+  </div>
+</div>
 </body>
 
 </html>
